--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -97,11 +97,9 @@
 .dropdown:hover .dropdown-content {
   display: block;
 }
-.h5{
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child),
   .dropdown .dropbtn {
     display: none;
   }
@@ -125,7 +123,7 @@
     display: block;
     text-align: left;
   }
-  /* .topnav.responsive .dropdown {
+  .topnav.responsive .dropdown {
     float: right;
   }
   .topnav.responsive .dropdown-content {
@@ -135,7 +133,7 @@
     display: block;
     width: 100%;
     text-align: left;
-  } */
+  }
 }
 .imageslide {
   width: 100%;
